--- a/index.html
+++ b/index.html
@@ -1570,7 +1570,7 @@
                         <div class="video-wrapper">
                             <!-- Replace src with your actual video file path -->
                             <video id="video1" controls preload="metadata">
-                                <source src="videos/bungalow-walkthrough.mp4" type="video/mp4">
+                                <source src="29404.mp4" type="video/mp4">
                                 Your browser does not support the video tag.
                             </video>
                             <div class="video-placeholder" onclick="playVideo('video1', this)">
