--- a/index.html
+++ b/index.html
@@ -1590,7 +1590,7 @@
                     <div class="video-item">
                         <div class="video-wrapper">
                             <video id="video2" controls preload="metadata">
-                                <source src="videos/interior-design-tour.mp4" type="video/mp4">
+                                <source src="29403.mp4" type="video/mp4">
                                 Your browser does not support the video tag.
                             </video>
                             <div class="video-placeholder" onclick="playVideo('video2', this)">
