--- a/index.html
+++ b/index.html
@@ -1314,8 +1314,9 @@
     <nav class="navbar" id="navbar">
         <div class="navbar-container">
             <a href="#home" class="navbar-logo">
-                PLANET
-                <span>The Universe of Design</span>
+                <!-- PLANET
+                <span>The Universe of Design</span> -->
+                <img src="29782.jpg">
             </a>
             
             <div class="navbar-links">
