--- a/index.html
+++ b/index.html
@@ -1313,10 +1313,8 @@
     <!-- ========== NAVBAR ========== -->
     <nav class="navbar" id="navbar">
         <div class="navbar-container">
-            <a href="#home" class="navbar-logo">
-                <!-- PLANET
-                <span>The Universe of Design</span> -->
-                <img src="29782.jpg">
+            <a href="#home">
+                <img src="https://i.ibb.co/4gfBdzmZ/planet-logo-text.png" alt="Planet - The Universe of Design" class="navbar-logo">
             </a>
             
             <div class="navbar-links">
