--- a/index.html
+++ b/index.html
@@ -1314,7 +1314,7 @@
     <nav class="navbar" id="navbar">
         <div class="navbar-container">
             <a href="#home">
-                <img src="https://i.ibb.co/4gfBdzmZ/planet-logo-text.png" alt="Planet - The Universe of Design" class="navbar-logo">
+                <img src="29782.jpg" alt="Planet - The Universe of Design" class="navbar-logo">
             </a>
             
             <div class="navbar-links">
