--- a/index.html
+++ b/index.html
@@ -1313,10 +1313,11 @@
     <!-- ========== NAVBAR ========== -->
     <nav class="navbar" id="navbar">
         <div class="navbar-container">
-            <a href="#home">
-                <img src="29782.jpg" alt="Planet - The Universe of Design" class="navbar-logo">
-            </a>
-            
+            <div style="width: 100px; height: 50px; background-color: blue; background-image: url('29782.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center;; ">
+                <a href="#home">
+                     <!-- <img src="29782.jpg" alt="Planet - The Universe of Design" class="navbar-logo"> -->
+                </a>
+            </div>
             <div class="navbar-links">
                 <a href="#home" class="navbar-link">Home</a>
                 <a href="#projects" class="navbar-link">Projects</a>
