--- a/index.html
+++ b/index.html
@@ -1313,7 +1313,7 @@
     <!-- ========== NAVBAR ========== -->
     <nav class="navbar" id="navbar">
         <div class="navbar-container">
-            <div style="width: 100px; height: 50px; background-color: blue; background-image: url('29782.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center;; ">
+            <div style="width: 100px; height: 50px; background-color: blue; background-image: url('29782.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center; object-fit: cover; ">
                 <a href="#home">
                      <!-- <img src="29782.jpg" alt="Planet - The Universe of Design" class="navbar-logo"> -->
                 </a>
