--- a/index.html
+++ b/index.html
@@ -1313,11 +1313,20 @@
     <!-- ========== NAVBAR ========== -->
     <nav class="navbar" id="navbar">
         <div class="navbar-container">
-            <div style="width: 100px; height: 50px; background-color: blue; background-image: url('29782.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center; object-fit: cover; ">
+            <!-- <div style="width: 100px; height: 50px; background-color: blue; background-image: url('29782.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center; object-fit: cover; ">
                 <a href="#home">
                      <!-- <img src="29782.jpg" alt="Planet - The Universe of Design" class="navbar-logo"> -->
-                </a>
-            </div>
+                <!-- </a>
+            </div> -->
+            <div style="
+    width: 100%; 
+    height: 100px; 
+    background-image: url('29782.jpg'); 
+    background-size: cover; 
+    background-position: center; 
+    background-repeat: no-repeat;">
+</div>
+
             <div class="navbar-links">
                 <a href="#home" class="navbar-link">Home</a>
                 <a href="#projects" class="navbar-link">Projects</a>
