--- a/index.html
+++ b/index.html
@@ -1319,8 +1319,8 @@
                 <!-- </a>
             </div> -->
             <div style="
-    width: 100%; 
-    height: 100px; 
+    width: 100px; 
+    height: 50px; 
     background-image: url('29782.jpg'); 
     background-size: cover; 
     background-position: center; 
