--- a/index.html
+++ b/index.html
@@ -1319,7 +1319,7 @@
                 <!-- </a>
             </div> -->
             <div style="
-    width: 100%; 
+    width: 150px; 
     height: 50px; 
     background-image: url('29782.jpg'); 
     background-size: cover; 
