--- a/index.html
+++ b/index.html
@@ -1388,7 +1388,7 @@
                 <!-- Project 1 -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://images.unsplash.com/photo-1600596542815-ffad4c1539a9?w=800&q=80" alt="Resident Bungalow">
+                        <img src="11.jpg" alt="Resident Bungalow">
                     </div>
                     <div class="project-info">
                         <h3 class="project-title">Resident Bungalow</h3>
@@ -1406,7 +1406,7 @@
                 <!-- Project 2 -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://images.unsplash.com/photo-1600607687939-ce8a6c25118c?w=800&q=80" alt="Row House">
+                        <img src="12.jpg" alt="Row House">
                     </div>
                     <div class="project-info">
                         <h3 class="project-title">Row House</h3>
@@ -1424,7 +1424,7 @@
                 <!-- Project 3 -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?w=800&q=80" alt="Row House Type Homes">
+                        <img src="13.jpg" alt="Row House Type Homes">
                     </div>
                     <div class="project-info">
                         <h3 class="project-title">Row House Type Homes</h3>
@@ -1442,7 +1442,7 @@
                 <!-- Project 4 -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://images.unsplash.com/photo-1600566753190-17f0baa2a6c3?w=800&q=80" alt="Luxury Bungalow">
+                        <img src="14.jpg" alt="Luxury Bungalow">
                     </div>
                     <div class="project-info">
                         <h3 class="project-title">Luxury Bungalow</h3>
@@ -1460,7 +1460,7 @@
                 <!-- Project 5 -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://images.unsplash.com/photo-1545324418-cc1a3fa10c00?w=800&q=80" alt="Residential Tenament">
+                        <img src="15.jpg" alt="Residential Tenament">
                     </div>
                     <div class="project-info">
                         <h3 class="project-title">Residential Tenament</h3>
@@ -1478,7 +1478,7 @@
                 <!-- Project 6 -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://images.unsplash.com/photo-1486406146926-c627a92ad1ab?w=800&q=80" alt="Sevani X">
+                        <img src="16.jpg" alt="Sevani X">
                     </div>
                     <div class="project-info">
                         <h3 class="project-title">Sevani X</h3>
@@ -1496,7 +1496,7 @@
                 <!-- Project 7 -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://images.unsplash.com/photo-1600047509807-ba8f99d2cdde?w=800&q=80" alt="House Project">
+                        <img src="17.jpg" alt="House Project">
                     </div>
                     <div class="project-info">
                         <h3 class="project-title">House Project</h3>
@@ -1514,7 +1514,7 @@
                 <!-- Project 8 -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://images.unsplash.com/photo-1600607687644-aac4c3eac7f4?w=800&q=80" alt="Royal Bungalow">
+                        <img src="18.jpg" alt="Royal Bungalow">
                     </div>
                     <div class="project-info">
                         <h3 class="project-title">Royal Bungalow</h3>
@@ -1749,7 +1749,7 @@
                     <div class="photos-grid" id="exteriorPhotosGrid">
                         <!-- Initial visible photos -->
                         <div class="photo-item" onclick="openLightbox(this)">
-                            <img src="29682.jpg" alt="Modern Bungalow Exterior">
+                            <img src="29668.jpg" alt="Modern Bungalow Exterior">
                             <div class="photo-overlay">
                                 <svg fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0zM10 7v3m0 0v3m0-3h3m-3 0H7"></path></svg>
                             </div>
@@ -1853,7 +1853,7 @@
                             </div>
                         </div>
                         <div class="photo-item hidden" onclick="openLightbox(this)">
-                            <img src="29668.jpg" alt="Dream Home">
+                            <img src="29682.jpg" alt="Dream Home">
                             <div class="photo-overlay">
                                 <svg fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0zM10 7v3m0 0v3m0-3h3m-3 0H7"></path></svg>
                             </div>
@@ -2035,7 +2035,7 @@
 
             <div class="about-grid">
                 <div class="about-image-wrapper">
-                    <img src="https://images.unsplash.com/photo-1497366216548-37526070297c?w=800&q=80" alt="Our Studio" class="about-image">
+                    <img src="file.jpg" alt="Our Studio" class="about-image">
                 </div>
 
                 <div class="about-content">
@@ -2075,7 +2075,7 @@
                     </p>
 
                     <div class="founder-card">
-                        <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=200&q=80" alt="Mayur Vaghasiya" class="founder-img">
+                        <img src="29050.jpg" alt="Mayur Vaghasiya" class="founder-img">
                         <div class="founder-info">
                             <p class="founder-label">Founder & Lead Architect</p>
                             <p class="founder-name">Mayur Vaghasiya</p>
