--- a/index.html
+++ b/index.html
@@ -1378,7 +1378,7 @@
     <section class="projects" id="projects">
         <div class="container">
             <div class="section-header">
-                <h2 class="section-title">Our Projects</h2>
+                <h2 class="section-title">Popular Projects</h2>
                 <p class="section-description">
                     From private residences to commercial spaces, each project tells a unique story through innovative design.
                 </p>
@@ -1388,7 +1388,7 @@
                 <!-- Project 1 -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="11.jpg" alt="Resident Bungalow">
+                        <img src="11.jpg" alt="Resident Bungalow", style="width: 100%; height: 100%; object-fit: contain;">
                     </div>
                     <div class="project-info">
                         <h3 class="project-title">Resident Bungalow</h3>
@@ -1406,7 +1406,7 @@
                 <!-- Project 2 -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="12.jpg" alt="Row House">
+                        <img src="12.jpg" alt="Row House", style="width: 100%; height: 100%; object-fit: contain;">
                     </div>
                     <div class="project-info">
                         <h3 class="project-title">Row House</h3>
@@ -1424,7 +1424,7 @@
                 <!-- Project 3 -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="13.jpg" alt="Row House Type Homes">
+                        <img src="13.jpg" alt="Row House Type Homes", style="width: 100%; height: 100%; object-fit: contain;">
                     </div>
                     <div class="project-info">
                         <h3 class="project-title">Row House Type Homes</h3>
@@ -1442,7 +1442,7 @@
                 <!-- Project 4 -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="14.jpg" alt="Luxury Bungalow">
+                        <img src="14.jpg" alt="Luxury Bungalow", style="width: 100%; height: 100%; object-fit: contain;">
                     </div>
                     <div class="project-info">
                         <h3 class="project-title">Luxury Bungalow</h3>
@@ -1460,7 +1460,7 @@
                 <!-- Project 5 -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="15.jpg" alt="Residential Tenament">
+                        <img src="15.jpg" alt="Residential Tenament", style="width: 100%; height: 100%; object-fit: contain;">
                     </div>
                     <div class="project-info">
                         <h3 class="project-title">Residential Tenament</h3>
@@ -1478,7 +1478,7 @@
                 <!-- Project 6 -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="16.jpg" alt="Sevani X">
+                        <img src="16.jpg" alt="Sevani X", style="width: 100%; height: 100%; object-fit: contain;">
                     </div>
                     <div class="project-info">
                         <h3 class="project-title">Sevani X</h3>
@@ -1496,7 +1496,7 @@
                 <!-- Project 7 -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="17.jpg" alt="House Project">
+                        <img src="17.jpg" alt="House Project", style="width: 100%; height: 100%; object-fit: contain;">
                     </div>
                     <div class="project-info">
                         <h3 class="project-title">House Project</h3>
@@ -1514,7 +1514,7 @@
                 <!-- Project 8 -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="18.jpg" alt="Royal Bungalow">
+                        <img src="18.jpg" alt="Royal Bungalow", style="width: 100%; height: 100%; object-fit: contain;">
                     </div>
                     <div class="project-info">
                         <h3 class="project-title">Royal Bungalow</h3>
